--- a/assets/css/core.css
+++ b/assets/css/core.css
@@ -1,3 +1,8 @@
+
+body {
+    font-size: 1em;
+}
+
 .tab {
     overflow: hidden;
     border: 1px solid #cccccc;
@@ -9,9 +14,9 @@
     border: none;
     outline: none;
     cursor: pointer;
-    padding: 12px 12px;
+    padding: 8px 8px;
     transition: 0.3s;
-    font-size: 0.75em;
+    font-size: 0.6em;
 }
 
 .tab button:hover {
